--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -237,6 +237,9 @@
       display: inline-block;
       margin-left: 3px
     }
+    .CoveoCopyToClipboard {
+      padding-left: 3px;
+    }
   </style>
 </body>
 </html>
