--- a/pages/index.html
+++ b/pages/index.html
@@ -94,7 +94,7 @@
                   <div class="coveo-result-cell" style="vertical-align:top;font-size:16px;" role="heading"
                     aria-level="2">
                     <a class="CoveoResultLink"></a>
-                    <span class="CoveoCopyToClipboard" data-field="@uri" data-caption="Copy" data-has-icon="true"
+                    <span class="CoveoCopyToClipboard" data-field="@uri" data-has-caption="false" data-has-icon="true"
                       data-icon="clipboard" data-icon-height="20" data-icon-width="20"></span>
                   </div>
                   <div class=" coveo-result-cell" style="width:120px;text-align:right;font-size:12px">
