Creates alias for CopyToClipboard for SF usage. New version 1.2.5.

--- a/pages/index.html
+++ b/pages/index.html
@@ -44,7 +44,6 @@
     <div class="CoveoAnalytics"></div>
     <div class="coveo-tab-section">
       <a class="CoveoTab" data-id="All" data-caption="All Content"></a>
-      <a class="CoveoTab" data-id="Turbo" data-caption="Turbo" data-expression="@documenttype=Repository"></a>
     </div>
     <div class="coveo-search-section">
       <div class="CoveoSearchbox" data-enable-omnibox="true"></div>
@@ -95,6 +94,8 @@
                     aria-level="2">
                     <a class="CoveoResultLink"></a>
                     <span class="CoveoCopyToClipboard" data-field="@uri" data-has-caption="false" data-has-icon="true"
+                      data-icon="clipboard" data-icon-height="20" data-icon-width="20"></span>
+                    <span class="CoveoSalesforceCopyToClipboard" data-field="@uri" data-has-caption="false" data-has-icon="true"
                       data-icon="clipboard" data-icon-height="20" data-icon-width="20"></span>
                   </div>
                   <div class=" coveo-result-cell" style="width:120px;text-align:right;font-size:12px">
